--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <title>Odin Recipes</title>
 
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="heading">Odin Recipes</h1>
 
-    <img src="">
-    <a href="lasagna.html">Lasagna</a>
+    <img id="img" src="https://www.nestle-cereals.com/global/sites/g/files/fawtmp151/files/styles/stage_visual_large_webp/public/d7/kids-wearing-hat_1.png.webp?itok=-TvOU_Zw">
+
+
+    <h2>Our specialty!</h2>
+    <p id="order">Order any</p>
+
+
+    <ul>
+        <li><a href="lasagna.html">Lasagna</a></li>
+        <li><a href="pizza.html">Pizza</a></li>
+        <li><a href="pasta.html">Pasta</a></li>
+    </ul>
+
 
 </body>
 </html>
