new class attribute for the images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <h1 id="heading">Odin Recipes</h1>
 
-    <img id="img" src="https://www.nestle-cereals.com/global/sites/g/files/fawtmp151/files/styles/stage_visual_large_webp/public/d7/kids-wearing-hat_1.png.webp?itok=-TvOU_Zw">
+    <img class="img" src="https://www.nestle-cereals.com/global/sites/g/files/fawtmp151/files/styles/stage_visual_large_webp/public/d7/kids-wearing-hat_1.png.webp?itok=-TvOU_Zw">
 
 
     <h2>Our specialty!</h2>
