pasta.html actualization
New class given to list items

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <p id="try">Try anything</p>
 
 
-    <ul>
-        <li><a href="lasagna.html">Lasagna</a></li>
-        <li><a href="pizza.html">Pizza</a></li>
-        <li><a href="pasta.html">Pasta</a></li>
+    <ul class="list">
+        <li class="list-item"><a href="lasagna.html">Lasagna</a></li>
+        <li class="list-item"><a href="pizza.html">Pizza</a></li>
+        <li class="list-item"><a href="pasta.html">Pasta</a></li>
     </ul>
 
 
